--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -1147,9 +1147,9 @@ nav.navbar.bootsnav.sticked .attr-nav.social li {
   max-width: 110%;
 }
 
-.width-120 img {
+/* .width-120 img {
   max-width: 120%;
-}
+} */
 
 
 .width-130 img {
