--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -4148,6 +4148,7 @@ body,
      # Testimonials 
 =================================================================== */
 
+
 .testimonials-area .carousel-indicators {
   bottom: 0;
   margin-top: 50px;
@@ -4155,9 +4156,9 @@ body,
 }
 
 .testimonials-area .carousel-indicators li {
-  width: 60px;
-  min-width: 60px;
-  height: 60px;
+  width: 45px;
+  min-width: 45px;
+  height: 45px;
   cursor: pointer;
   border: 1px solid #e7e7e7;
   -moz-box-shadow: 0 0 10px #cccccc;
@@ -4175,7 +4176,7 @@ body,
   -o-transition: all 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
   vertical-align: middle;
-  margin: 0 10px;
+  margin: 0 px;
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
