--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -2817,7 +2817,7 @@ body,
   left: 0;
   width: 100%;
   height: 90px; /* tinggi blur */
-  background: linear-gradient(to top, rgba(241, 229, 229, 0.9), transparent);
+  background: linear-gradient(to top, #f0dfcf98, transparent);
   pointer-events: none;
 }
 
